<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.spongepowered</groupId>
    <artifactId>systemofadownload</artifactId>
    <version>1.0-SNAPSHOT</version>
    <organization>
        <name>SpongePowered</name>
    </organization>
    <inceptionYear>\</inceptionYear>
    <licenses>
        <license>
            <name>MIT</name>
        </license>
    </licenses>

    <packaging>pom</packaging>

    <profiles>
        <profile>
            <id>java16</id>
            <activation>
                <!-- This will activate if the build runs using a jdk version number that matches the prefix given. -->
                <jdk>16</jdk>
            </activation>
            <properties>
                <!-- Using Lagom prefix to avoid conflicts with others -->
                <lagom.jdk.source>16</lagom.jdk.source>
                <lagom.jdk.target>16</lagom.jdk.target>
                <lagom.docker.image>adoptopenjdk/openjdk16</lagom.docker.image>
            </properties>
        </profile>
    </profiles>
    <modules>
        <module>artifact-api</module>
        <module>artifact-impl</module>
        <module>artifact-query-api</module>
        <module>artifact-query-impl</module>
        <module>versions-api</module>
        <module>versions-query-api</module>
        <module>versions-query-impl</module>
        <module>versions-impl</module>
        <module>version-synchronizer</module>
        <module>sonatype</module>
        <module>auth-api</module>
        <module>auth-impl</module>
        <module>server-auth</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>com.lightbend.lagom</groupId>
                <artifactId>lagom-maven-plugin</artifactId>
                <version>${lagom.version}</version>
                <configuration>
                    <cassandraEnabled>false</cassandraEnabled>
                    <cassandraPort>9042</cassandraPort>
                    <serviceLocatorEnabled>true</serviceLocatorEnabled>
                    <kafkaPort>9092</kafkaPort>
                    <zookeeperPort>2181</zookeeperPort>
                    <kafkaEnabled>false</kafkaEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>16</release>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${mycila.license.version}</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>HEADER.txt</header>
                            <excludes>
                                <exclude>**/README</exclude>
                                <exclude>src/test/resources/**/*</exclude>
                                <exclude>src/main/resources/**/*</exclude>
                                <exclude>.run/**</exclude>
                                <exclude>**/*.xml</exclude>
                                <exclude>**/*.yaml</exclude>
                                <exclude>**/*.yml</exclude>
                                <exclude>.editorconfig</exclude>
                                <exclude>LICENSE.txt</exclude>
                                <exclude>config/**</exclude>
                                <exclude>**/*.conf</exclude>
                                <exclude>terraform/**</exclude>
                                <exclude>.java-version</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                    <properties>
                        <name>SystemOfADownload</name>
                        <organization>SpongePowered</organization>
                        <url>https://spongepowered.org/</url>
                    </properties>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.37.0</version>
                <configuration>
                    <skip>true</skip>
                    <images>
                        <image>
                            <name>%g/%a:%l</name>
                            <build>
                                <from>${lagom.docker.image}</from>
                                <tags>
                                    <tag>${project.version}</tag>
                                    <tag>latest</tag>
                                </tags>
                                <dockerFileDir>${project.parent.basedir}/deploy</dockerFileDir>
                                <assemblies>
                                    <assembly>
                                        <name>deps-release</name>
                                        <descriptorRef>release-dependencies</descriptorRef>
                                        <targetDir>/etc/lagom/lib</targetDir>
                                    </assembly>
                                    <assembly>
                                        <name>deps-snapshot</name>
                                        <descriptorRef>snapshot-dependencies</descriptorRef>
                                        <targetDir>/etc/lagom/lib</targetDir>
                                    </assembly>
                                    <assembly>
                                        <descriptorRef>artifact</descriptorRef>
                                        <targetDir>/etc/lagom/app</targetDir>
                                    </assembly>
                                    <assembly>
                                        <name>config</name>
                                        <inline>
                                            <fileSets>
                                                <fileSet>
                                                    <directory>${project.basedir}/src/main/resources</directory>
                                                    <include>*.conf</include>
                                                    <outputDirectory>.</outputDirectory>
                                                </fileSet>
                                            </fileSets>
                                        </inline>
                                        <targetDir>/etc/lagom/config</targetDir>
                                    </assembly>
                                </assemblies>
                            </build>
                        </image>
                    </images>
                </configuration>
                <executions>
                    <execution>
                        <id>build-docker-image</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>5.0.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dateFormat>yyyyMMdd-HHmmss</dateFormat>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <generateGitPropertiesFile>false</generateGitPropertiesFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>4.4.2</version>
                <configuration>
                    <username>${env.DB_USERNAME}</username>
                    <password>${env.DB_PASSWORD}</password>
                    <url>${env.DB_URL}</url>
                    <driver>org.postgresql.Driver</driver>
                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.postgresql</groupId>
                        <artifactId>postgresql</artifactId>
                        <version>${postgres.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.lightbend.lagom</groupId>
                <artifactId>lagom-maven-dependencies</artifactId>
                <version>${lagom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-bom_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.lightbend.lagom</groupId>
                <artifactId>lagom-javadsl-akka-discovery-service-locator_${scala.binary.version}</artifactId>
                <version>${lagom.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lightbend.akka.discovery</groupId>
                <artifactId>akka-discovery-kubernetes-api_${scala.binary.version}</artifactId>
                <version>1.0.3</version>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr-jackson</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>lagom-pac4j_${scala.binary.version}</artifactId>
                <version>${lagom.pac4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>pac4j-http</artifactId>
                <version>${pac4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>pac4j-jwt</artifactId>
                <version>${pac4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.taymyr.lagom</groupId>
                <artifactId>lagom-openapi-java-api_${scala.binary.version}</artifactId>
                <version>${lagom.openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.taymyr.lagom</groupId>
                <artifactId>lagom-openapi-java-impl_${scala.binary.version}</artifactId>
                <version>${lagom.openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-stream-typed_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-persistence-testkit_${scala.binary.version}</artifactId>
                <version>${akka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgres.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <scala.binary.version>2.13</scala.binary.version>
        <junit.version>5.7.2</junit.version>
        <jackson.version>2.10.4</jackson.version>
        <lagom.version>1.6.5</lagom.version>
        <pac4j.version>3.7.0</pac4j.version>
        <lagom.pac4j.version>2.2.1</lagom.pac4j.version>
        <vavr.version>0.10.3</vavr.version>
        <mycila.license.version>4.0.rc2</mycila.license.version>
        <akka.version>2.6.14</akka.version>
        <lagom.docker.image>openjdk:16-alpine3.13</lagom.docker.image>
        <postgres.version>42.2.18</postgres.version>
        <hibernate.version>5.5.4.Final</hibernate.version>
        <guice.version>5.0.1</guice.version>
        <play.docker.jvm.startup>
            java $JAVA_OPTS --illegal-access=permit -cp
            '/etc/lagom/app/${project.artifactId}-${project.version}.jar':'/etc/lagom/lib/*'
            play.core.server.ProdServerStart
        </play.docker.jvm.startup>
    </properties>
</project>
